--- a/LocalRepo/style.css
+++ b/LocalRepo/style.css
@@ -1,3 +1,9 @@
-p{
-    color:red;
+body {
+    background-color: lightblue;
+    font-family: Arial, sans-serif;
+    text-align: center;
+}
+
+h1 {
+    color: darkblue;
 }
